Snapping doesn't respect Clipping Border #109641

Closed
opened 2023-07-03 11:52:45 +02:00 by item412 · 2 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb

Short description of error
Snapping happens outside of Clipping Border

Once clipping is used, you will only see what’s inside the volume you defined. Tools such as paint, sculpt, selection, transform snapping, etc. will also ignore geometry outside the clipping bounds.

https://docs.blender.org/manual/en/4.0/editors/3dview/navigate/regions.html#clipping-region

Exact steps for others to reproduce the error

  1. Hide part of the geometry
  2. With snapping enabled, hover over hidden geometry

snapBug.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` **Short description of error** Snapping happens outside of Clipping Border <video src="/attachments/9d658012-7da7-407a-8728-b54f328551a6" title="bandicam 2023-07-03 12-41-48-825.mp4" controls></video> >Once clipping is used, you will only see what’s inside the volume you defined. Tools such as paint, sculpt, selection, transform snapping, etc. will also ignore geometry outside the clipping bounds. https://docs.blender.org/manual/en/4.0/editors/3dview/navigate/regions.html#clipping-region **Exact steps for others to reproduce the error** 1. Hide part of the geometry 2. With snapping enabled, hover over hidden geometry [snapBug.blend](/attachments/09e3ce8f-f1e2-4bf3-9f06-1a9fc7196db8)
item412 added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-03 11:52:46 +02:00
Iliya Katushenock added the
Interest
Modeling
label 2023-07-03 11:57:04 +02:00
Member

Can confirm, this is supposed to work like this

Once clipping is used, you will only see what’s inside the volume you defined. Tools such as paint, sculpt, selection, transform snapping, etc. will also ignore geometry outside the clipping bounds.

https://docs.blender.org/manual/en/4.0/editors/3dview/navigate/regions.html#clipping-region

CC @mano-wii

Can confirm, this is supposed to work like this >Once clipping is used, you will only see what’s inside the volume you defined. Tools such as paint, sculpt, selection, transform snapping, etc. will also ignore geometry outside the clipping bounds. https://docs.blender.org/manual/en/4.0/editors/3dview/navigate/regions.html#clipping-region CC @mano-wii
Philipp Oeser added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-07-03 12:07:38 +02:00

Only Snap To Face supports this for now.

Complexity and performance issues led to not supporting this for the other snap modes.

But currently the code allows supporting this without too much complexity or performance penalty (if you only consider the cases without clipping).

So it seems like a good time to implement this.

Only `Snap To Face` supports this for now. Complexity and performance issues led to not supporting this for the other snap modes. But currently the code allows supporting this without too much complexity or performance penalty (if you only consider the cases without clipping). So it seems like a good time to implement this.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-03 19:39:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109641
No description provided.