Fix #109641: Snapping doesn't respect Clipping Border

The clip planes in `rv3d->clip` were not being added.